# http-server-c

./: .gitignore  CMakeLists.txt  README.md
include/: mydefs.h  mystr.h
src/: CMakeLists.txt  main.c
